--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My all social media web aaplication",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js",
+    "start": "nodemon index.js",
     "test": "\t"
   },
   "keywords": [
@@ -13,6 +13,7 @@
   "author": "jaskirat singh",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2"
   }
 }
